# qhChat

./: .gitignore  LICENSE  README.md
client/: CMakeLists.txt  adduseritem.h  adduseritem.ui  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.h  applyfrienditem.ui  applyfriendlist.cpp  applyfriendlist.h  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.ui  chatview.cpp  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  clickedoncelabel.cpp  clickedoncelabel.h  contactuserlist.cpp  contactuserlist.h  conuseritem.cpp  conuseritem.h  customizeedit.h  findsuccessdlg.cpp  (+41 more)
client/style/: style.qss
server/ChatServer/: ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  config.ini
server/ChatServer2/: CSession.cpp  ChatServer.cpp  ChatServer.sln  ChatServer.vcxproj  ChatServer.vcxproj.filters  LogicSystem.cpp  LogicSystem.h  PropertySheet.props  config.ini  const.h
server/GateServer/: AsioIOServicePool.cpp  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  GateServer.sln  GateServer.vcxproj  GateServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  StatusGrpcClient.h  VarifyGrpcClient.cpp  VarifyGrpcClient.h  config.ini  const.h  redisMgr.cpp  redisMgr.h
server/StatusServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  ChatGrpcClient.h  StatusServer.cpp  StatusServer.sln  StatusServer.vcxproj  StatusServer.vcxproj.filters  StatusServiceImpl.cpp  config.ini  const.h
server/VarifyServer/: config.json  email.js  package-lock.json  package.json  server.js
sql/: qhchat.sql
